infrastructure/kite/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kite
    app.kubernetes.io/instance: kite
  name: kite
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kite
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kite
    spec:
      serviceAccountName: kite
      containers:
        - image: ghcr.io/zxh326/kite:v0.13.0
          imagePullPolicy: IfNotPresent
          name: kite
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: kite-data
              mountPath: /data
      volumes:
        - name: kite-data
          persistentVolumeClaim:
            claimName: kite-data-pvc
