infrastructure/kite/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kite
    app.kubernetes.io/instance: kite
  name: kite
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: kite
  type: ClusterIP
